functional markdown for missing notes etc

--- a/_keywords/excerpts/d0254.md
+++ b/_keywords/excerpts/d0254.md
@@ -4,6 +4,7 @@ The city executioner, a Black man named Louis Congo, comes before the Superior C
   
 [Transcription](#transcription-french-diplomatic)  
 [Translation](#translation-english-modern)  
+[Notes](#notes)  
   
 ## Transcription (French, diplomatic)  
   
@@ -61,7 +62,7 @@ vingtsix
 [page # 1] [digital 2]   
   
   
-To the Gentlemen of the Superior Council of the Province of Louisiana, *Exposé* [of] the Attorney General of the King that Louis Congo, *nègre* executioner of justice, came to complain that on the night of Thursday or Friday last, he believed he was being assassinated in his house by three *sauvage* deserters who had been bound by the Company [of the Indies] for two years to the gentlemen de Noyan and Raguet. For a long time, [it has been that] alarge group of sauvage slaves have gathered together as deserters [maroons], covetously circling the city, well armed, and whom must be vanquished [so that] they do not become a nuisance, having good provisions of gunpowder and bullets. The slave of *Sieur* Saint-Martin, [from] him having stolen 12 pounds of powder and 20 pounds of bullets.These desertions are always accompanied by thefts committed against their masters, and several habitants have asked me to punish the deserters, convinced that the punishments of which they have done themselves up until now have caused them to be put [at] risk. The King, extending his paternal kindness no matter how far we are [from him], gave in the month of May 1724 a regulation [*le Code Noir*] for this Province. Under Article 32,<sup>1</sup> by which it does not in fact order the death penalty for simple desertion, but by Articles 12<sup>2</sup> and 13<sup>3</sup>>, wherein he [King Louis XV] forbids [slaves] carrying weapons  and gatherings [of slaves]. He leaves it up to the arbitration of the courts to punish them to death, depending upon the circumstances. Here [in this case] there are  aggravating factors–such that one could never admit [that their] slaves intimidate them–for the death of at least of the leaders of the aforesaid plot for desertion and gatherings. That  is why, [if it] pleases you gentleman, pray [that] Mister [Pierre Dugué de] Boisbriand, Commanding General of this Province, President of the Council, order our sauvages surveille the said deserters, [so that we can] arrest them and place them all in our prisons, to know the leaders of the said plot, and     
+To the Gentlemen of the Superior Council of the Province of Louisiana, *Exposé* [of] the Attorney General of the King that Louis Congo, *nègre* executioner of justice, came to complain that on the night of Thursday or Friday last, he believed he was being assassinated in his house by three *sauvage* deserters who had been bound by the Company [of the Indies] for two years to the gentlemen de Noyan and Raguet. For a long time, [it has been that] alarge group of sauvage slaves have gathered together as deserters [maroons], covetously circling the city, well armed, and whom must be vanquished [so that] they do not become a nuisance, having good provisions of gunpowder and bullets. The slave of *Sieur* Saint-Martin, [from] him having stolen 12 pounds of powder and 20 pounds of bullets.These desertions are always accompanied by thefts committed against their masters, and several habitants have asked me to punish the deserters, convinced that the punishments of which they have done themselves up until now have caused them to be put [at] risk. The King, extending his paternal kindness no matter how far we are [from him], gave in the month of May 1724 a regulation [*le Code Noir*] for this Province. Under Article 32,[^i] by which it does not in fact order the death penalty for simple desertion, but by Articles 12[^ii] and 13[^iii], wherein he [King Louis XV] forbids [slaves] carrying weapons  and gatherings [of slaves]. He leaves it up to the arbitration of the courts to punish them to death, depending upon the circumstances. Here [in this case] there are  aggravating factors–such that one could never admit [that their] slaves intimidate them–for the death of at least of the leaders of the aforesaid plot for desertion and gatherings. That  is why, [if it] pleases you gentleman, pray [that] Mister [Pierre Dugué de] Boisbriand, Commanding General of this Province, President of the Council, order our sauvages surveille the said deserters, [so that we can] arrest them and place them all in our prisons, to know the leaders of the said plot, and     
   
   
 [p. # 2] [dig.3]    
@@ -71,3 +72,20 @@ to complete their trail with all the rigor provided by the new Article aforement
   
   
 [Signed:] [François] Fleuriau  
+  
+## Notes  
+[^i]: «XXXII. L’esclave fugitif qui aura été en fuite pendant un mois, à compter du jour que son maître l’aura
+dénoncé à la justice aura les oreilles coupées et sera marqué d’une fleur-de-lys sur une épaule; et s’il récidive
+pendant un autre mois, à compter pareillement du jour de la dénonciation, il aura le jarret coupé et il sera marqué
+d’une fleur-de-lys sur l’autre épaule, et la troisième fois il sera puni de mort.»  
+  
+[^ii]: «XII. Défendons aux esclaves de porter aucunes armes offensives ni de gros bâtons, à peine du fouet, et
+de confiscation des armes au profit de celui qui les en trouvera saisis, à l’exception seulement de ceux qui seront
+envoyés à la chasse par leurs maîtres, et qui seront porteurs de leurs billets ou marques connues.»  
+  
+[^iii]: «XIII. Défendons pareillement aux esclaves appartenans à différens maîtres de s’attrouper le jour ou la
+nuit, sous prétexte de noces ou autrement, soit chez l’un de leurs maîtres ou ailleurs, et encore moins dans les grands
+chemins ou lieux écartes à peine de punition corporelle, qui ne pourra être moins que du fouet et de la fleur-de-lys;
+et en cas de fréquentes récidives et autres circonstances aggravantes, pourront être punis de mort, ce que nous
+laissons à l’arbitrage des juges : enjoignons à tous nos sujets de courre fus aux contrevenans, et de les arrêter et
+conduire en prison, bien qu’ils ne soient officiers, et qu’il n’y ait encore contre lesdits contrevenans aucun décret.»
