--- a/_keywords/excerpts/d0261.md
+++ b/_keywords/excerpts/d0261.md
@@ -373,4 +373,208 @@ Nueva Orleans, 23 de Febrero de 1793.
 
 
 
-## Translation (English, modern)
+## Translation (English, modern)  
+[page #1] [digital 2]
+
+Year 1793
+
+Proceedings for Mariana Marcos versus *don* Pedro Olivier in order to get an estimate to obtain her freedom. 
+
+No. 119___
+Judge, the Lord
+Governor |
+Notary, Ximenes
+
+[modern, in red pencil] #3059 
+[modern, in pencil] Feb. 15, 1793
+[modern, in red pencil] #2981 
+
+
+[p. #2] [dig.3]
+
+[blank]
+
+
+[p. #3] [dig.4]
+
+1
+Mariana Marcos, alias Voisin, *negra* libre, householder of this city, [comes] before you, in conformity with the law, stands and states:That I have a sister of mine, *esclava* of*don* Olivier D'Anneville, named Pelagia, for whom I wish to grant freedom for the priceof her fair valuation, so for that reason I have named as my appraiser *don* [Francisco] Ramón Canes, known as *el Curro*,[^i] pleading of Your Lordship to have the aforenamed, following your acceptance, take [his] oath, and make known to the other party [to] name their [appraiser] within two days, otherwise he shall be chosen ex officio, so[that] both [parties] can proceed with the said estimate, thusly.
+
+Your Lordship, I beg you to provide and order as I request with due justice, costs, and I swear to not be of malice, and as is necessary, etc. 
+
+For Mariana Voisin,
+[Signed:] Felipe Guinault
+
+
+[p. #4] [dig.5]
+
+Filed: And [in] consideration of the proceedings that have been initiated by the supplicant,for the purpose [of] proposing the freedom of the *negra* Pelagia, proceed tothe valuation of her, for whichhas been appointed the named subject [Canes] as expressed, to whom will be made aware for his acceptance, and oath, which is to be committed, [and] communicate the present request, and this ruling,to *don* Olivier D'Anneville, who is the said master of the referenced slave, to whom it will [also] be advised that within two days he shall name another appraiserof his satisfaction [on his behalf] with warningthat if he does not comply, it will be executed ex officio.
+
+[Rubric, Carondelet]     [Rubric, Vidal]
+
+Thus ordered: [By] the Lord *don* Francisco Baron de Carondelet, Knight of the Religious [Order] of St. John[of Jerusalem], Colonel of the Royal Armies, Governor, Vice-Patron, and Intendant-General of this Province of Louisiana by His Majesty, with dictum and agreement of the Lord Dr. *don* Nicolas Maria, Lieutenant-Governor, Civil Legal Advisor,
+
+
+[p. #5] [dig.6]
+
+2
+and Advisor General of the Government, which is signed in the City of New Orleans on the 15th of February seventeen-hundred and ninety-three.
+
+[Signed:] Carlos Ximenes
+
+Notarized: On the same day, I made known the preceding decree to Mariana Marcos Voisin, *negra* libre. I attest,
+
+[Signed:] Ximenes
+
+Notarized: On the 16th of the aforementioned [month], I, the notary, made known to *don* Olivier D'Anneville the preceding decree. I attest,
+
+[Signed:] Ximenes
+
+On the same day, month, and year, I, the notary, made known [to] the appointed appraiser of the preceding decree, *don* Francisco Ramón Canes, and understanding of its contents,
+
+
+[p. #6] [dig.7]
+
+said he accepted, and [will] do, for God and the Cross, well and faithfully [of] his charge, and he signed as follows. I attest,
+
+[Signed:] Juan Ramón Canes
+[Signed:] Carlos Ximenes
+
+[modern, in pencil] 2
+
+In the the City of New Orleans on the 18th of February seventeen-hundredninety-three, [came] before me, the notary [of the] parish, Lieutenant of the Military Jurisdiction of the Louisiana [Province],*don* Pedro Olivier, and states: That in regard to her liberty byMariana Marcos, *negra*libre, in the ordered event and of which will be [*don*e] by virtue of the mandate, name and appoint [as] estimator on my behalf,
+
+
+[p. #7] [dig.8]
+
+3
+for the property [to be] valuated [by] both, [the] named Pelagie, the Captain *don* Pedro de Marigny, pleading of Your Lordship, thatdoing as has been ordered, will proceed to thepending ruling, following the necessary formalities, and I sign as such. I attest,
+
+[Signed:] Pierre Oliver
+[Signed:] Carlos Ximenez
+
+*don* Pedro de Marigny has been appointed, as requested in the antecedent proceedings, to whom it will be made known for his acceptance, and oath, which is to be committed, giving notice to the other party for their knowledge, and summoned to proceed to the estimation. Prepared in the standard way,
+
+[Signed:] 
+[Rubric, Carondelet]     [Rubric, Vidal]
+
+Thus ordered:
+
+
+[p. #8] [dig.9]
+
+[By] the Lord *don* Francisco Baron de Carondelet, Knight of the Religious [Order] of St. John [of Jerusalem], Coronel of the Royal Armies, Vice-Patron and Intendant-General of this Province of Louisiana by His Majesty, with dictum andagreement of Lord Dr. *don* Nicolas Maria Vidal, Lieutenant-Governor, Civil Legal Advisor, and Advisor General of the government, which was signed in this City of New Orleans on the9th of February, seventeen-hundredninety-three.
+
+[modern, in pencil] 3
+[Signed:] Carlos Ximenez
+
+On the same day, I made known the preceding decree to *don* Pedro Olivier. I attest,
+
+[Signed:] Ximenez
+
+On the aforementioned day, I made this known to Mariana Marcos Voisin. I attest, 
+
+[Signed:] Ximenez
+
+
+[p. #9] [dig.10]
+
+4\)
+On the 20th of the said [month], I, the notary, went to the house of residence of *don* Pedro de Marignyand notified him in person of the naming of [him] as appraiser by the preceding decree, which he was made aware of its contents. He said he would accept, [and having] accepted swore before God and the Cross, to make good and faithful of his oath and he signs, which I attest.
+
+[Signed:] Pedro de Marigny
+[Signed:] Carlos Ximenez 
+
+[modern, in pencil] 4
+
+In the City of New Orleans, on the 21st of February seventeen-hundred and ninety- three, in accordance with the provisions of the request from Mariana Marcos, morena  libre,[^ii] appearing in the presence of *don*  Pedro de Marigny of the [Royal and Military] Order of St.  Louis, Captain of the Militias of this  City, and of *don* Francisco Ramón Canes, the aforenamed third party, the *negra*  Pelagia, *esclava* of Lieutenant *don* Pedro  Olivier, for the purpose of proceeding to her estimate, and making known the
+
+
+[p. #10] [dig.11]
+
+facts of her age, and any additional considerations, they said that since, theyappraised the said *negra*, Pelagia, at the amountof 500 pesos, in which they have both agreed in conformity, [that] the said price is what they judge her to be worth, and in which they valuate her, with whichthese proceedings are [now] concluded, [to] which they have signed. I attest,
+
+[Signed:] Pedro de Marigny
+[Signed:] Francisco Ramón Canes
+
+Before me 
+[Signed:] Carlos Ximenez
+
+Decided and decreed: It is declared the legitimate value of the *negra* Pelagia, *esclava* of *don* Pedro Olivier, the amount of 500pesos, in which she has been valued by the appraisers appointed by [both] parties, by virtue of which, shall be delivered the expressed
+
+
+[p. #11] [dig.12]
+
+sum, [by] Mariana Marcos, alias Voisin, or [by] Pelagia herself, shall [then] proceed [with respect to] the aforementioned, *don* Pedro Olivier, to grant the latter [Pelagia] the appropriate Deed of Freedom, and assessed of the costs, shall be paid with10 *reales* by the stated *negra*, Mariana, who brought forth this process. 
+
+[Signed:] The Baron de Carondelet
+[Rubric, Carondelet]
+[Signed:] Nicolas Maria Vidal
+[Rubric, Vidal]
+
+Thus ordered: [By] the Lord *don* Francisco Baron de Carondelet, Knight of the Religious [Order] of St. John [of Jerusalem], Colonel of the Royal Armies, Governor, Vice-Patron and Intendant-General of this Province of Louisiana by His Majesty, with dictum and agreement of Lord Dr. *don* Nicolas Maria Vidal, Lieutenant-Governor, Civil Legal Advisor, and Advisor General of the Government, which is signed in this City of New Orleans on the 23rd of February seventeen- hundred ninety-three.
+
+[modern, in pencil] 5
+[Signed:] Carlos Ximenez
+
+On the aforementioned day, I made know the decree 
+
+
+[p. #12] [dig.13]
+
+which precedes to *don* Pedro Olivier. I attest,
+
+[Signed:] Ximenez
+
+Notarized: On the same day, I made [it] known to Mariana Marcos Voisin. I attest,
+
+[Signed:] Ximenez
+
+On the same day, I, the notary, made known the decree which precedes to *don* Luis Liotau, Public Assessor and being aware of its contents, he said that he accepted, and swore by God and the Cross to do well and faithfully[of] his oath, and he signs as such. I attest, 
+
+[Signed:] Luis Liotau
+[Signed:] Carlos Ximenez
+
+Assessment of costs of the proceedings undertaken for Mariana Marcos pertaining to granting freedom to Pelagia, her sister, with payment in *reales*, in conformity with what was ordered and taxed accordingly.
+
+[Rubric, Carondelet] To Lord Baron de Carondelet of the Religious [Order] of St. Juan [of Jerusalem], Governor and Intendant-General
+
+
+[p. #13] [dig.14]
+
+6\)
+of this Province of Louisiana 
+by His Majesty, 8 *reales* for two half-signatures 
+and one whole____________________8
+
+[Rubric, Vidal] To Lord Dr. *don* Nicolas Maria Vidal, 
+Lieutenant-Governor, Civil Legal Advisor, and Advisor General of the Government, 10 *reales* for the judicial affairs assigned to him ____________________________10
+
+[Notarized Signature, Guinault] To *don* Felipe Guinault, Representing Public
+Attorney, 5 *reales* for one petition___5
+
+[Notarized Signature, Marigny] To *don* Pedro de Marigny, 11 *reales* for 
+the estimate, which I verify__________________________11
+
+[Notarized Signature, Canes] To Francisco Ramón Canes, 11 *reales* for the 
+same reason__________________________11
+
+[Rubric, Ximenez] To the notary, for his rights in what was *don*e,
+written, and [his] services performed, 53 *reales*_________________________53
+
+[Signature, Liotau] To the [Public] Assessor for the assignment of this [task], 
+2 *reales*______________________2
+
+New Orleans, February 23, 1793.           
+\{100 total
+\{12 pesos, 4 *reales* 
+
+[Signed:] Luis Liotau
+[Rubric, Liotau]
+
+[modern, in pencil] 6
+  
+## Notes  
+[^i]: “*Curro*” was a local term used to refer to free Black men in Havana. *Los curros* had never been enslaved, traced their ancestors to Andalucia, Spain, and occupied a freedom attached to land and space. In Cuba, the term also reflected a growing fear of free Black residents of the city; *curros* were said to dress outside of their station, live in marginal Black areas of the city, and speak with distinct “Spanish” dialect. In the document, Don Francisco Ramón Canes, Mariana’s appraiser, is referred to as “*el curro*.”  
+  
+[^ii]: In the Spanish colonial system, “*morena/o*” was used to refer to mixed-race people. Under the Spanish *casta* system that quantified race, however, *morena/o* was not a racial designation; rather, the term was typically used to describe physical attributes (in this case, an olive complexion) instead of a legal racial category.
