--- a/_keywords/excerpts/d0111.md
+++ b/_keywords/excerpts/d0111.md
@@ -324,7 +324,7 @@ el Dec.<sup>to</sup> que antesede doy fee__
   
 [Marginalia:]  
   
-Tasaz/)<sup>sn</sup> .  
+Tasaz\)<sup>sn</sup> .  
   
   
 [Cuerpo:]  
@@ -338,8 +338,8 @@ el ess.<sup>no</sup> D.<sup>n</sup> Juan Bautista mer
 cier; y<sup>~</sup> D.<sup>n</sup> Luis Dauquemenil   
 de Morain, Terceros nombradoz   
 para la Tasaz.<sup>on</sup> del Negro Juan   
-Pedro, alías Bon home,<s>(solicitada   
-por)</s> esclavo de d.<sup>n</sup> Salomon Prebot,   
+Pedro, alías Bon home,~~(solicitada~~   
+~~por)~~ esclavo de d.<sup>n</sup> Salomon Prebot,   
 solicitada por la Negra Naneta   
 Saint Marc; y haviedno cada   
 uno enteradose de La edad, círcuns  
@@ -636,9 +636,10 @@ reales_________________________,,,,75
   
 [Rubrica, Liotau] Al Tazador por la Asignacion de esta   
 quatro r<sup>~</sup>________________________,,,,,,4  
-___________  
+  
 Nueva Orleanz 23 de Marzo de1793 \{<u> ,,186</u>_____      
-                                                           \{ <u>,,23 p.<sup>s</sup> 2 r.<sup>s</sup></u>   
+\{ <u>,,23 p.<sup>s</sup> 2 r.<sup>s</sup></u>   
+  
 [Firmado:] Luis Liotau  [Rubrica, Liotau]  
   
   
@@ -676,8 +677,7 @@ Notary
 [p. #3] [dig.4]  
   
 1
-Naneta St. Marc *negra* libre,resident of the Attakapas Post and presently of this city, before Your Lordship by means of public attorney, I say that I have a brother of mine named Juan Pedro, *alias* Bonhomme, *esclavo* to *Don* Salomon Prevot, who dreams of freedom based on the price of your just valuation. So that it can be verified, I name Santiago Cofier the appraiser on my part. Preceding his acceptance and oath to serve,  
-Your Lordship appoint him, and make known to the other party named to take action for this appraisal. Participating and being present at the tribunal, the said *negro* Bonhomme has much pain coming from the fact that the previous hurricane caused a hut where he was staying for a while to fall upon his body. Thusly, Your Lordship, I beg that you serve to provide and order what I ask with due justice, and I swear to this, etc.  
+Naneta St. Marc *negra* libre,resident of the Attakapas Post and presently of this city, before Your Lordship by means of public attorney, I say that I have a brother of mine named Juan Pedro, *alias* Bonhomme, *esclavo* to *Don* Salomon Prevot, who dreams of freedom based on the price of your just valuation. So that it can be verified, I name Santiago Cofier the appraiser on my part. Preceding his acceptance and oath to serve, Your Lordship appoint him, and make known to the other party named to take action for this appraisal. Participating and being present at the tribunal, the said *negro* Bonhomme has much pain coming from the fact that the previous hurricane caused a hut where he was staying for a while to fall upon his body. Thusly, Your Lordship, I beg that you serve to provide and order what I ask with due justice, and I swear to this, etc.  
   
 For Naneta   
 [Signed:] Felipe Guinault  
