--- a/_keywords/excerpts/d0176.md
+++ b/_keywords/excerpts/d0176.md
@@ -386,7 +386,7 @@ los dos de Med___________________,,,,12.
   
 [Rubrica, Vidal] Al S.<sup>or</sup> D.<sup>r</sup> Nicolaz M.<sup>a</sup> Vidal Th.<sup>te</sup> Gov.<sup>or</sup> Aud.<sup>or</sup> de grrã de  
 esta Prov.<sup>a</sup> p.<sup>r</sup> sello y Ases.<sup>or</sup> g.<sup>l</sup> del Gov.<sup>no</sup> de ella di  
-es y Seiz r.<sup>~</sup> p.<sup>er/sup> la ases.<sup>a</sup> q.<sup>e</sup> se asigna a |__<u>5b<sup>ta</sup></u>___,,,,16.  
+es y Seiz r.<sup>~</sup> p.<sup>er</sup> la ases.<sup>a</sup> q.<sup>e</sup> se asigna a |__<u>5b<sup>ta</sup></u>___,,,,16.  
   
 [Rubrica, Mendez] Ad.<sup>~</sup> Ant.<sup>o</sup> Mendes Procurador Pu.<sup>co</sup> cinco r.<sup>s</sup> por  
 y una Petis<sup>on</sup>____________________,,,,,,5.  
@@ -445,8 +445,7 @@ _____
 [p. #3] [dig.4]  
   
 1\)  
-Roseta Montreuill, *parda libre*, [comes] before Your Lordship, as is accorded under parish law, and I say  
-that I wish to rescue my son Domingo, *alias* Lubin, *quarterón esclavo* of *Don* Roberto Montreuil for the price of his fair valuation, so that this [price] can be verified, I name as my estimator *Don* Christobal Badia, if it serves Your Lordship to have him appointed, pending his acceptance and oath, and order of the party to name another [on his behalf] within three days, and that [if it is] not executed, one shall be appointed ex *officio*. Thusly.  
+Roseta Montreuill, *parda libre*, [comes] before Your Lordship, as is accorded under parish law, and I say that I wish to rescue my son Domingo, *alias* Lubin, *quarterón esclavo* of *Don* Roberto Montreuil for the price of his fair valuation, so that this [price] can be verified, I name as my estimator *Don* Christobal Badia, if it serves Your Lordship to have him appointed, pending his acceptance and oath, and order of the party to name another [on his behalf] within three days, and that [if it is] not executed, one shall be appointed ex *officio*. Thusly.  
   
 To Your Lordship, I beg you to provide and order as I request, with due justice, to which I swear and [I swear] for her, etc.  
   
@@ -536,8 +535,7 @@ On the said day I made known to Don Ro-
   
   
 4\)  
-berto Montreuil the decree which precedes. I   
-attest,  
+berto Montreuil the decree which precedes. I attest,  
   
 [Firmado:] Ximenez  [Rubrica, Ximenez]  
   
@@ -648,9 +646,9 @@ Santiago Bellaire, [on behalf of the] public, 11 *reales* for the same reason __
   
 [Rubric, Ximenez] To the Notary Public for his rights in the written proceedings and [his usual] occupation, 43 *reales*____________43  
   
-[Rubric, Liotau] To the Assessor for that which was assigned in this 2 reales_________2  
+[Rubric, Liotau] To the Assessor for that which was assigned in this 2 reales\_________2  
 New Orleans, 18 October, 1793 \{___105  
       
-    \{13 *pesos* 1 *real*  
+    \{13 _pesos_ 1 _real_  
   
 [Signed:] Luis Liotau  [Rubric, Liotau] 
