--- a/_keywords/excerpts/d0188.md
+++ b/_keywords/excerpts/d0188.md
@@ -13,7 +13,7 @@
 A Messieurs les Presidents  
 Et. Conseillers du Conseil et Regis.  
   
-De Chavannes secretaire dud.<sup></sup>[i]t</sup> Conseil a  
+De Chavannes secretaire dud.<sup>[i]t</sup> Conseil a  
 l’honneur de vous Representer qu’il auroit  
 il y a prés de trois ans achepté du S.r De Gauvrit  
 Cap.<sup>[itai]ne</sup> d'infanterie une *negresse* piece d'inde  
