--- a/_keywords/excerpts/d0263.md
+++ b/_keywords/excerpts/d0263.md
@@ -110,8 +110,7 @@ S.<sup>no</sup> Pub.<sup>co</sup>
 [Rubrica, Broutin]  
   
 N.<sup>n</sup> f.<sup>a</sup>   En el mismo dia lo hize saver a Cecilia Yndia Libre en supersona Doy fee_____  
-  
-  
+    
 [Firmado:] Broutin   
 S.no  
 [Rubrica, Broutin]  
@@ -315,7 +314,7 @@ Notarized and dated: On the same day I made known to Cecilia, *yndia* libre. I a
 Notary  
 [Rubric, Broutin]  
   
-Note: That on the same day, I, the notary, have written the injunction ordering the  decree which precedes to Don Juan Bautista Tounoir, and I have given it to the the *yndia* libre, Cecilia. I attest,  
+Note: That on the same day, I, the notary, have written the injunction ordering the  decree which precedes to Don Juan Bautista Tounoir, and I have given it to the the *yndia libre*, Cecilia. I attest,  
   
   
 [Signed:] Broutin  
@@ -333,7 +332,7 @@ Notary
   
   
 34  
-Don Pedro Sauvé testamentary executor of the late Don Juan Bautista Tournoir in the proceedings that have been brought forward based on the requests of Cecilia, *yndia* libre, of this city, that her niece, Naneta, slave to the commemorated deceased, to be declared free, or to have her appraised to rescue her [from slavery] based on the price of her estimate, with all due respect I say:That it served Your Lordship to provide the Notary to address an official letter to thecommemorated deceased, so that at the firstoccasion he remit his authority [over the slave] as [sufficiently] instructed and expensed, along with the mentioned *india* Naneta, reserving the right for a [court] hearing with the same Tounoir regarding that which corresponds to the principal request of the   
+Don Pedro Sauvé testamentary executor of the late Don Juan Bautista Tournoir in the proceedings that have been brought forward based on the requests of Cecilia, *yndia libre*, of this city, that her niece, Naneta, slave to the commemorated deceased, to be declared free, or to have her appraised to rescue her [from slavery] based on the price of her estimate, with all due respect I say: That it served Your Lordship to provide the Notary to address an official letter to the commemorated deceased, so that at the first occasion he remit his authority [over the slave] as [sufficiently] instructed and expensed, along with the mentioned *india* Naneta, reserving the right for a [court] hearing with the same Tounoir regarding that which corresponds to the principal request of the   
   
   
 [p. #5] [dig.79]  
