--- a/_keywords/excerpts/d0347.md
+++ b/_keywords/excerpts/d0347.md
@@ -35,13 +35,13 @@ Catherine         mouton
   
 Permis La venté a condition que les deniers  
 qui en proviendront Seront employez Au  
-payement de ce qui est dû a la Comp.<sup><[agni]e/sup>   
+payement de ce qui est dû a la Comp.<sup><[agni]e</sup>   
 des Indes Ce 24 aoust 1738  
   
 [Signé:] Salmon  
   
   
-## Translation (Spanish, modern)    
+## Translation (English, modern)    
   
 [page #1] [digital 1]  
   
@@ -53,7 +53,7 @@ To *Monseigneur* de Salmon, *Commissaire-Ordonnateur* for the King of this Provi
 [Before you] humbly pleads Catherine Mouton, widow of the deceased Antoine Bonvillain, toolmaker, says that her late husband is dead, [killed] in the war with *Monsieur* D'Artaguiette, and [he] had left some debts. And wanting to take care of this charge, she found herself obliged to liquidate with the Company [*des Indes*], [and] to ask your permission to sell un nègre, fearing that [otherwise] death would take hold [of her and her family]. If that were to happen, she would find herself encumbered, as well as these [her] children [that she] must take care of. This is why she hopes that you will do her justice. And not knowing how to sign, she has made her mark in the presence of witnesses, this 9th of August, 1738.  
   
 Undersigned,  
-+  
+\+  
 mark of Catherine Mouton  
   
   
