--- a/_keywords/excerpts/d0350.md
+++ b/_keywords/excerpts/d0350.md
@@ -250,9 +250,7 @@ Also, [he] gives and bequeaths to the eldest daughter of *Sieur* St. Amant, name
   
 Also, [he] gives and bequeaths to Antoine, son of *Sieur* Dominique St. Amant, an equal sum of one thousand *livres* in real [money], paid once.  
   
-Also, [he] gives and bequeaths to his brothers and sisters, or their heirs, and having cause and claiming [their] right in his [line of] succession, all that which can appertain to him from both the paternal and  
-maternal side in such goods, be they movable or immovable, following the usage or customary law of the place  
-where they will find themselves situated, wanting that they shall be—according to this intention—his titular legatees, without any of the two [sides of] them able to ask nor to claim  anything in his succession beyond that which is [stated] above, nor of any other property, movable or immovable, of whatever nature they may be,and in whichever place that they may be situated.   
+Also, [he] gives and bequeaths to his brothers and sisters, or their heirs, and having cause and claiming [their] right in his [line of] succession, all that which can appertain to him from both the paternal and maternal side in such goods, be they movable or immovable, following the usage or customary law of the place where they will find themselves situated, wanting that they shall be—according to this intention—his titular legatees, without any of the two [sides of] them able to ask nor to claim  anything in his succession beyond that which is [stated] above, nor of any other property, movable or immovable, of whatever nature they may be,and in whichever place that they may be situated.   
   
 Also, [he] has made and instituted for his residuary legatee, Louis Augustin Meuillon, his son, and in the case of [the] death of the said Louis Augustin Meuillon, being that he is absent, he names as substitutes the *Sieur*  
   
@@ -272,8 +270,7 @@ Named below and which [are] his administrators have, in recompense for which ser
   
 Also, [he] wills and intends that *Sieur* Ennemond Meuillon, his nephew, manages his estate to the greatest advantage of his heirs, until they themselves come to take possession of it or transfer powers. Nevertheless, pray the *Sieur* St. Amant or one of them will help him with their counsel and their opinion recommending to his nephew the Scriptures and [to] follow them.   
   
-Also, [he] said and declared to us that all of the above bequest, to take care of Charlotte, free *négresse*,   
-and her two children, Louis, *mulatre*, and his sister Helene, also free, and [that] this [is] because of the good and pleasant services he has always received: [He] also wills and intends that the present testament be executed in its form and content as his last will, revoking to this effect all other testaments or addendums that he may have previously made, wishing that this present [testament] alone may function as the provisions of his last will, which he dictated and named to us himself and [which he] himself read and re-read in the presence of *Monsieurs* Arnoult and Gaillardy, merchants residing in this said city. Made, dictated, and named in the said house and bedroom, the aforesaid day  
+Also, [he] said and declared to us that all of the above bequest, to take care of Charlotte, free *négresse*, and her two children, Louis, *mulatre*, and his sister Helene, also free, and [that] this [is] because of the good and pleasant services he has always received: [He] also wills and intends that the present testament be executed in its form and content as his last will, revoking to this effect all other testaments or addendums that he may have previously made, wishing that this present [testament] alone may function as the provisions of his last will, which he dictated and named to us himself and [which he] himself read and re-read in the presence of *Monsieurs* Arnoult and Gaillardy, merchants residing in this said city. Made, dictated, and named in the said house and bedroom, the aforesaid day  
   
   
 [p. #4] [dig.5]  
