try 254 footnotes again

--- a/_keywords/excerpts/d0254.md
+++ b/_keywords/excerpts/d0254.md
@@ -74,18 +74,8 @@ to complete their trail with all the rigor provided by the new Article aforement
 [Signed:] [François] Fleuriau  
   
 ## Notes  
-[^i]: «XXXII. L’esclave fugitif qui aura été en fuite pendant un mois, à compter du jour que son maître l’aura
-dénoncé à la justice aura les oreilles coupées et sera marqué d’une fleur-de-lys sur une épaule; et s’il récidive
-pendant un autre mois, à compter pareillement du jour de la dénonciation, il aura le jarret coupé et il sera marqué
-d’une fleur-de-lys sur l’autre épaule, et la troisième fois il sera puni de mort.»  
+[^i]: «XXXII. L’esclave fugitif qui aura été en fuite pendant un mois, à compter du jour que son maître l’aura dénoncé à la justice aura les oreilles coupées et sera marqué d’une fleur-de-lys sur une épaule; et s’il récidive pendant un autre mois, à compter pareillement du jour de la dénonciation, il aura le jarret coupé et il sera marqué d’une fleur-de-lys sur l’autre épaule, et la troisième fois il sera puni de mort.»  
   
-[^ii]: «XII. Défendons aux esclaves de porter aucunes armes offensives ni de gros bâtons, à peine du fouet, et
-de confiscation des armes au profit de celui qui les en trouvera saisis, à l’exception seulement de ceux qui seront
-envoyés à la chasse par leurs maîtres, et qui seront porteurs de leurs billets ou marques connues.»  
+[^ii]: «XII. Défendons aux esclaves de porter aucunes armes offensives ni de gros bâtons, à peine du fouet, et de confiscation des armes au profit de celui qui les en trouvera saisis, à l’exception seulement de ceux qui seront envoyés à la chasse par leurs maîtres, et qui seront porteurs de leurs billets ou marques connues.»  
   
-[^iii]: «XIII. Défendons pareillement aux esclaves appartenans à différens maîtres de s’attrouper le jour ou la
-nuit, sous prétexte de noces ou autrement, soit chez l’un de leurs maîtres ou ailleurs, et encore moins dans les grands
-chemins ou lieux écartes à peine de punition corporelle, qui ne pourra être moins que du fouet et de la fleur-de-lys;
-et en cas de fréquentes récidives et autres circonstances aggravantes, pourront être punis de mort, ce que nous
-laissons à l’arbitrage des juges : enjoignons à tous nos sujets de courre fus aux contrevenans, et de les arrêter et
-conduire en prison, bien qu’ils ne soient officiers, et qu’il n’y ait encore contre lesdits contrevenans aucun décret.»
+[^iii]: «XIII. Défendons pareillement aux esclaves appartenans à différens maîtres de s’attrouper le jour ou la nuit, sous prétexte de noces ou autrement, soit chez l’un de leurs maîtres ou ailleurs, et encore moins dans les grands chemins ou lieux écartes à peine de punition corporelle, qui ne pourra être moins que du fouet et de la fleur-de-lys; et en cas de fréquentes récidives et autres circonstances aggravantes, pourront être punis de mort, ce que nous laissons à l’arbitrage des juges : enjoignons à tous nos sujets de courre fus aux contrevenans, et de les arrêter et conduire en prison, bien qu’ils ne soient officiers, et qu’il n’y ait encore contre lesdits contrevenans aucun décret.»
